# beautiful-stt

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
scripts/: build-windows-cuda.ps1
src/: App.css  App.tsx  AudioProcessor.tsx  AudioUpload.tsx  PeaksPlayer.tsx  SimpleWaveform.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: libggml-base.0.dylib  libggml.0.dylib  libwhisper.1.dylib  whisper-cli-aarch64-apple-darwin  whisper-cli-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_processor.rs  audio_processor_cli.rs  downloader.rs  lib.rs  main.rs  summarizer.rs  summarizer_cli.rs  utils.rs
src-tauri/src/audio_processor/audio_decoder/: mod.rs
src/components/: DisplaySummary.tsx  DisplayTranscript.tsx  ThemeToggle.tsx
src/lib/: constants.ts  useTheme.ts
