[package]
name = "beautiful-stt"
version = "0.1.0"
description = "Beautiful Speech-to-Text"
authors = ["eduar.tech"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beautiful_stt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]                                     
default = []                                   
metal = ["whisper-rs/metal"]                   
cuda = ["whisper-rs/cuda"]      

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

# AUDIO PROCESS
ureq = "2"    
hound = "3.5.1"
nnnoiseless = "0.5.2"
whisper-rs = "0.15"
llama-cpp-2 = "0.1"
rubato = "0.16"
indicatif = "0.18.3"
symphonia = { version = "0.5", features = ["mp3", "ogg", "wav", "flac", "aac"] }
opus = "0.3"
ogg = "0.9"

